--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       Welcome to Riyadh
     </h1>
     <!-- SUB HEAD -->
+    <h2>
+      Where A Traditional Past Meets A Modern Future.
+    </h2>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
