--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img scr="transit.jpg"
+      <img scr="transit.jpg">
     </div>
   </div>
 </body>
