Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img scr="transit.jpg" alt="Modern Transit`">
-      <img scr="garden.jpg"
+      <img scr="garden.jpg" alt="Riyadh Garden">
     </div>
   </div>
 </body>
