--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     </p>
     
     <img scr="camels-in-truck.jpg" alt="The roads of Riyadh">
+    
+    <h3>
+      Sources
+    </h3>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
