--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       Sources
     </h3>
     
-    <a href="url">Lonely Planet</a>
+    <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
     <a href="url">link text</a>
 
     <div id="content">
