--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </h3>
     
     <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
-    <a href="url">Wikipedia</a>
+    <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
