--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- SUB HEAD -->
       <h2>Where A Traditional Past Meets A Modern Future.</h2>
 
+      <div id="content">
       <h3>Travel</h3>
         <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.</p>
       
