Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="content">
 
             <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-            <img scr="./images/garden.jpg" alt="Modern Transit`">
+            <img scr="./images/garden.jpg" alt="Riyadh Garden">
             <img scr="garden.jpg" alt="Riyadh Garden">
       </div>
     </div>
