Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
             <img scr="./images/garden.jpg" alt="Riyadh Garden">
-            <img scr="garden.jpg" alt="Riyadh Garden">
+            <img scr="./images/transportation/camels-in-truck.jpg" alt="Riyadh Garden">
       </div>
     </div>
   </body>
